[package]
name = "pushover-rs"
version = "0.3.20"
edition = "2021"
license = "MIT"
description = "A Rust client for Pushover (https://www.pushover.net)"
homepage = "https://github.com/Oscuro87/pushover-rs"
documentation = "https://docs.rs/pushover-rs/latest/"
repository = "https://github.com/Oscuro87/pushover-rs"
readme = "README.md"
keywords = [
    "pushover",
    "notification",
    "mobile",
    "desktop",
    "push"
]
authors = ["Emka877"]

[dependencies]
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.9", features = ["json", "blocking", "multipart"] }
serde = { version = "1.0.215", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.132"
ron = "0.8.1"

[features]
default = []

[[example]]
name = "usage"
path = "examples/usage.rs"

[[example]]
name = "usage-with-attachment"
path = "examples/usage_with_attachment.rs"
