[package]
name = "pushover-rs"
version = "0.3.22"
edition = "2021"
license = "MIT"
description = "A Rust client for Pushover (https://www.pushover.net)"
homepage = "https://github.com/Oscuro87/pushover-rs"
documentation = "https://docs.rs/pushover-rs/latest/"
repository = "https://github.com/Oscuro87/pushover-rs"
readme = "README.md"
keywords = [
    "pushover",
    "notification",
    "mobile",
    "desktop",
    "push"
]
authors = ["Emka877"]

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.23", features = ["json", "blocking", "multipart"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.143"
ron = "^0.11.0"

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[[example]]
name = "usage"
path = "examples/usage.rs"

[[example]]
name = "usage-with-attachment"
path = "examples/usage_with_attachment.rs"
